--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('/Users/scottrenz/Documents/GitHub/Front-End-III/src/pexels-photo-696218-min.jpeg');
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
