--- a/src/Form.css
+++ b/src/Form.css
@@ -28,7 +28,7 @@
             }
             .bottomStyle {
               text-align: left;
-              margin-top: 20%;
+              margin-top: 25%;
               margin-left: 150%;
               width: 50%;
               background-color: white;
@@ -68,6 +68,12 @@
                                   margin-left: 10%;
                                                   }
                                                 }
+                                                @media only screen and (max-width: 1100px) {
+                                                  .span1 {
+                                                      top: 70%;
+                                                      left: 25%;
+                                                                  }
+                                                } 
                                                 @media only screen and (max-width: 600px) {
                                                   .span1 {
                                                       top: 113%;
