--- a/src/Form.css
+++ b/src/Form.css
@@ -28,10 +28,17 @@
             }
             .bottomStyle {
               text-align: left;
-              margin-top: 25%;
+              margin-top: 12%;
               margin-left: 150%;
               width: 50%;
               background-color: white;
+              color: black;
+              background-color: white;
+              font-size: 20px;
+                border: 2px solid black;
+                border-radius: 5px;
+                width: 600px;
+
             }
             .bottomStyle2 {
               text-align: left;
@@ -39,7 +46,13 @@
               margin-left: 150%;
               width: 50%;
               background-color: white;
-            }
+              color: black;
+              background-color: white;
+              font-size: 20px;
+                border: 2px solid black;
+                border-radius: 5px;
+                width: 600px;
+}
           @media only screen and (max-width: 1600px) {
                 .span1 {
                     top: 60%;
@@ -63,12 +76,23 @@
                 margin-left: 10%;
                                 }
                               }
-                                @media only screen and (max-width: 1600px) {
+                              @media only screen and (max-width: 600px) {
+                                .bottomStyle {
+                                  margin-top: 30%;
+                                width: 300px;
+                                                }
+                                              }
+                                                @media only screen and (max-width: 1600px) {
                                   .bottomStyle2 {
                                   margin-left: 10%;
                                                   }
                                                 }
-                                                @media only screen and (max-width: 1100px) {
+                                                @media only screen and (max-width: 600px) {
+                                                  .bottomStyle2 {
+                                                  width: 300px;
+                                                                  }
+                                                                }
+                                                                  @media only screen and (max-width: 1100px) {
                                                   .span1 {
                                                       top: 70%;
                                                       left: 25%;
@@ -78,7 +102,7 @@
                                                   .span1 {
                                                       top: 113%;
                                                       left: 25%;
-                                                                  }
+                                                                    }
                                                 } 
                                                 @media only screen and (max-width: 600px) {
                                                   .span2 {
@@ -92,4 +116,47 @@
                                                       left: 25%;
                                                                   }
                                                 } 
-                                  
+              
+                                                .rowStyle1  {
+                                                  color: blue;  
+                                                  width: 600px;
+                                                    }
+                                                    @media only screen and (max-width: 600px) {
+                                                      .rowStyle1 {
+                                                          width: 300px;
+                                                                      }
+                                                    } 
+                                                        
+                                                    .rowStyle2 {
+                                                      width: 600px;  
+                                                        }
+                                                        @media only screen and (max-width: 600px) {
+                                                          .rowStyle2 {
+                                                              width: 300px;
+                                                                          }
+                                                        } 
+                                                        
+                                                        .rowStyle3  {
+                                                          width: 600px;  
+                                                            }
+                                                            @media only screen and (max-width: 600px) {
+                                                              .rowStyle3 {
+                                                                  width: 300px;
+                                                                              }
+                                                            } 
+  
+                                                            .contain  {
+                                                            color: black;
+                                                            background-color: white;
+                                                            font-size: 20px;
+                                                              border: 2px solid black;
+                                                              border-radius: 5px;
+                                                              width: 600px;
+                                                          }
+                                                          @media only screen and (max-width: 600px) {
+                                                            .contain {
+                                                                width: 300px;
+                                                                            }
+                                                          } 
+      
+                                                                    
